# gents

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
derives/: Cargo.toml
derives/src/: container.rs  lib.rs  serde_json.rs  symbol.rs  ts_interface.rs
src/: descriptor.rs  file_generator.rs  lib.rs  ts_formatter.rs
tests/: Cargo.toml  test.rs
tests/src/: lib.rs  test.rs  tests.rs
tests/src/serde_test/: mod.rs
tests/src/serde_test/ts/: .gitignore  index.ts  package.json  tsconfig.json
