[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "gents"
version = "1.0.2"
license = "MIT"
description = "generate Typescript interfaces from Rust code"
repository = "https://github.com/ImJeremyHe/gents"
keywords = ["Typescript", "interface", "ts-rs", "Rust", "wasm"]

[dependencies]
dprint-plugin-typescript = "0.95.8"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["./", "derives", "tests"]
