[package]
name = "gents_derives"
version = "0.9.0"
description = "provides some macros for gents"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.15"
paste = "1.0.5"
proc-macro2 = "1.0.36"
